knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/AcceptH1Bs__c.field-meta.xml
<CustomField>
    <fullName>AcceptH1Bs__c</fullName>
    <description>Accept H1Bs for PracticeLink XML Feed</description>
    <inlineHelpText>Accept H1Bs for PracticeLink</inlineHelpText>
    <label>Accept H1Bs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>