knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/AcceptJ1s__c.field-meta.xml
<CustomField>
    <fullName>AcceptJ1s__c</fullName>
    <description>Accept J1s for PracticeLink XML Feed</description>
    <inlineHelpText>Accept J1s for PracticeLink</inlineHelpText>
    <label>Accept J1s</label>
    <length>255</length>
    <type>Text</type>
</CustomField>