knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Other relevant comments related to the requisition</description>
    <inlineHelpText>Other relevant comments related to the requisition</inlineHelpText>
    <label>Additional Comments</label>
    <type>TextArea</type>
</CustomField>