knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/AdditionalJobRequirements__c.field-meta.xml
<CustomField>
    <fullName>AdditionalJobRequirements__c</fullName>
    <description>Additional Job Requirements for Corporate Public Site XML Feed</description>
    <inlineHelpText>Additional Job Requirements for Corporate Public Site</inlineHelpText>
    <label>Additional Job Requirements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>