knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Admissions_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Admissions_Transfers__c</fullName>
    <label>Admissions/Transfers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>