knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Age_of_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Requisition__c</fullName>
    <formula>TODAY() -   DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Requisition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>