knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Age_of_Requisition_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Requisition_Prioritization__c</fullName>
    <formula>IF (Age_of_Requisition__c &gt;=90, 3,

IF (Age_of_Requisition__c &gt;=60, 2,

IF (Age_of_Requisition__c &gt;=30, 1,

0

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Requisition Prioritization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>