knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/APAY__c.field-meta.xml
<CustomField>
    <fullName>APAY__c</fullName>
    <formula>IF(
  OR(ISBLANK(bpats__Pay_Rate__c), ISBLANK(bpats__Bill_Rate__c)),
  0,
  bpats__Pay_Rate__c - bpats__Bill_Rate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APAY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>