knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/APAY_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>APAY_Prioritization__c</fullName>
    <formula>IF (APAY__c &gt;=16667, 3,

IF (APAY__c &gt;=8334, 2,

IF (APAY__c &gt;=0, 1,

0

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APAY Prioritization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>