knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Benefits_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Eligibility__c</fullName>
    <label>Benefits Eligibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>