knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Bonus_Cap__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Cap__c</fullName>
    <label>Bonus Cap $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>