knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Bonus_Cap_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Cap_Phrase__c</fullName>
    <formula>IF(Post_Bonus_Cap__c = TRUE, &quot;$&quot; &amp;  TEXT(Bonus_Cap__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bonus Up To</label>
    <type>Text</type>
</CustomField>