knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/bpats__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Title__c</fullName>
    <inlineHelpText>This job will be posted externally</inlineHelpText>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>