knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/bpats__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>bpats__Start_Date__c</fullName>
    <inlineHelpText>Taking into consideration clinician offboarding, startup go-live, and/or coverage change implementation, this is the desired date the new clinician(s) will start working.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>