knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Calendly_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendly_Link__c</fullName>
    <formula>Recruiter__r.Calendly__CalendlyLink__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendly Link</label>
    <type>Text</type>
</CustomField>