knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Reason__c</fullName>
    <description>If a job is cancelled, a Cancel Reason must be entered.</description>
    <inlineHelpText>If a job is cancelled, a Cancel Reason must be entered.</inlineHelpText>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage Model Change</fullName>
            </value>
            <value>
                <fullName>Retained Clinician</fullName>
            </value>
            <value>
                <fullName>Position on Hold</fullName>
            </value>
            <value>
                <fullName>Facility Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>