knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Canceled_Hours__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Hours__c</fullName>
    <description>Filled + Canceled = Requested</description>
    <label>Canceled Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>