knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Challenge_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Challenge_Ranking__c</fullName>
    <formula>IF(INCLUDES(bpats__Account__r.Challenge_Ranking__c, &quot;1&quot;), &quot;1 &quot;, NULL) &amp;
IF(INCLUDES(bpats__Account__r.Challenge_Ranking__c, &quot;2&quot;), &quot;2 &quot;, NULL) &amp;
IF(INCLUDES(bpats__Account__r.Challenge_Ranking__c, &quot;3&quot;), &quot;3 &quot;, NULL) &amp;
IF(INCLUDES(bpats__Account__r.Challenge_Ranking__c, &quot;N/A&quot;), &quot;N/A&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Challenge Ranking</label>
    <type>Text</type>
</CustomField>