knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>City field for use in Job Board XML feed</description>
    <inlineHelpText>City of Job</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>