knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Comp_Cap_Phrase__c.field-meta.xml
<CustomField>
    <fullName>Comp_Cap_Phrase__c</fullName>
    <formula>IF(Post_Compensation_Cap__c = TRUE, &quot;$&quot; &amp;  TEXT(Compensation_Cap__c), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will be populated if the &quot;Post Compensation Cap&quot; checkbox is checked</inlineHelpText>
    <label>Compensation Up To</label>
    <type>Text</type>
</CustomField>