knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Compensation_Cap__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Cap__c</fullName>
    <inlineHelpText>Compensation Cap currency value to be added to Compensation Cap</inlineHelpText>
    <label>Compensation Cap $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>