knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Credentials__c.field-meta.xml
<CustomField>
    <fullName>Credentials__c</fullName>
    <description>Credentials for Doximity XML Feed</description>
    <inlineHelpText>Credentials for Doximity</inlineHelpText>
    <label>Credentials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>