knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Days_Creation_to_Fill__c.field-meta.xml
<CustomField>
    <fullName>Days_Creation_to_Fill__c</fullName>
    <formula>Filled_Date__c -  DATEVALUE(CreatedDate)</formula>
    <label>Days Creation to Fill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>