knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Days_Post_to_Fill__c.field-meta.xml
<CustomField>
    <fullName>Days_Post_to_Fill__c</fullName>
    <formula>Filled_Date__c  -  bpats__Posted_Date__c</formula>
    <label>Days Post to Fill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>