knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Degree__c.field-meta.xml
<CustomField>
    <fullName>Degree__c</fullName>
    <description>Degree for XML Feed to DocCafe</description>
    <inlineHelpText>Degree for DocCafe</inlineHelpText>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>