knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Delivery_Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lead_Email__c</fullName>
    <description>Returns the email address of the Recruiter</description>
    <formula>Recruiter__r.Email</formula>
    <label>Recruiter&apos;s Email</label>
    <type>Text</type>
</CustomField>