knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Delivery_Lead_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Lead_Name__c</fullName>
    <description>Pulls the First &amp; Last names of the Recruiter and puts them together with a space in between.</description>
    <formula>Recruiter__r.FirstName &amp; &apos; &apos; &amp;  Recruiter__r.LastName</formula>
    <label>Recruiter&apos;s Name</label>
    <type>Text</type>
</CustomField>