knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Display_As__c.field-meta.xml
<CustomField>
    <fullName>Display_As__c</fullName>
    <description>Display As for Doximity XML Feed</description>
    <inlineHelpText>Display As for Doximity</inlineHelpText>
    <label>Display As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>