knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/External_URL__c.field-meta.xml
<CustomField>
    <fullName>External_URL__c</fullName>
    <description>this is set by the system</description>
    <formula>IF(bpats__Post_Externally__c, &apos;https://corehc--qa.sandbox.my.site.com/jobs/s?jobId=&apos; +  CASESAFEID(Id), &quot;Not Posted&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>External job board posting set by the system</inlineHelpText>
    <label>External URL</label>
    <type>Text</type>
</CustomField>