knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Facility_Address__c.field-meta.xml
<CustomField>
    <fullName>Facility_Address__c</fullName>
    <description>Pulls directly from the Facility Account record</description>
    <inlineHelpText>Address from the Facility record</inlineHelpText>
    <label>Facility Address</label>
    <type>Address</type>
</CustomField>