knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the account</description>
    <inlineHelpText>This is a lookup to the account</inlineHelpText>
    <label>Facility Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs (Facility Name)</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>