knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Facility_Title__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title__c</fullName>
    <label>Facility Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff MDDO</fullName>
            </value>
            <value>
                <fullName>Staff NPPA</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>Assistant Medical Director</fullName>
            </value>
            <value>
                <fullName>System Medical Director</fullName>
            </value>
            <value>
                <fullName>Regional Medical Officer</fullName>
            </value>
            <value>
                <fullName>Lead NPPA</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>Virtual RN</fullName>
            </value>
            <value>
                <fullName>Virtual NPPA</fullName>
            </value>
            <value>
                <fullName>Virtual MDDO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>