knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Facility_Title_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the code set object with filters to display active facility type values</description>
    <label>Facility Title</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CodeSet.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>CodeSet.CodeSetType</field>
            <operation>equals</operation>
            <value>Facility Title</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CodeSet</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>