knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Fellowship_Residency__c.field-meta.xml
<CustomField>
    <fullName>Fellowship_Residency__c</fullName>
    <label>Fellowship/Residency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>