knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Filled_Date__c.field-meta.xml
<CustomField>
    <fullName>Filled_Date__c</fullName>
    <description>Date that the Job is Filled, whether by Hours or Openings</description>
    <label>Filled Date</label>
    <type>Date</type>
</CustomField>