knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/GlobalFacilityID__c.field-meta.xml
<CustomField>
    <fullName>GlobalFacilityID__c</fullName>
    <description>Global Facility ID from the Facility record for the XML feed to external job boards.</description>
    <formula>VALUE( bpats__Account__r.Global_Facility_ID__c )</formula>
    <inlineHelpText>Global Facility ID from Facility record</inlineHelpText>
    <label>Global Facility Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>