knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/H1Visa__c.field-meta.xml
<CustomField>
    <fullName>H1Visa__c</fullName>
    <description>H1Visa for PracticeMatch XML Feed</description>
    <inlineHelpText>H1Visa for PracticeMatch</inlineHelpText>
    <label>H1Visa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>