knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Highlight__c.field-meta.xml
<CustomField>
    <fullName>Highlight__c</fullName>
    <description>Highlight for PracticeLink XML Feed</description>
    <inlineHelpText>Highlight for PracticeLink</inlineHelpText>
    <label>Highlight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>