knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Hours_Filled__c.field-meta.xml
<CustomField>
    <fullName>Hours_Filled__c</fullName>
    <description>Sum of Hours Commitment from related Placements.</description>
    <inlineHelpText>Sum of Hours Commitment from related Placements.</inlineHelpText>
    <label>Hours Filled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>