knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/International__c.field-meta.xml
<CustomField>
    <fullName>International__c</fullName>
    <description>International for Doximity XML Feed</description>
    <inlineHelpText>International As for Doximity</inlineHelpText>
    <label>International</label>
    <length>255</length>
    <type>Text</type>
</CustomField>