knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/IsFeaturedJob__c.field-meta.xml
<CustomField>
    <fullName>IsFeaturedJob__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsFeaturedJob for Corporate Public Site XML Feed</description>
    <inlineHelpText>IsFeaturedJob for Corporate Public Site</inlineHelpText>
    <label>Is Featured Job</label>
    <type>Checkbox</type>
</CustomField>