knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/IsLocationless__c.field-meta.xml
<CustomField>
    <fullName>IsLocationless__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsLocationless for Corporate Public Site XML Feed</description>
    <inlineHelpText>IsLocationless for Corporate Public Site</inlineHelpText>
    <label>Is Locationless</label>
    <type>Checkbox</type>
</CustomField>