knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/J1Visa__c.field-meta.xml
<CustomField>
    <fullName>J1Visa__c</fullName>
    <description>J1Visa for PracticeMatch XML Feed</description>
    <inlineHelpText>J1Visa for PracticeMatch</inlineHelpText>
    <label>J1Visa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>