knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Job_Prioritization__c.field-meta.xml
<CustomField>
    <fullName>Job_Prioritization__c</fullName>
    <formula>Case(Client_Segment__c, &apos;Local/Rural&apos;, 1, &apos;Regional&apos;, 2, &apos;Strategic&apos;, 3, 0)+

CASE(Leadership_Position__c, &apos;No&apos;, 0, &apos;Yes&apos;, 3, 0)+

CASE(Start_Up_Designation__c, &apos;No&apos;, 0, &apos;Yes&apos;, 3, 0)+

Age_of_Requisition_Prioritization__c +  APAY_Prioritization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Job Prioritization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>