knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Job_Title_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Picklist__c</fullName>
    <inlineHelpText>This will be used for the Job Title and categorizing jobs on the job board.</inlineHelpText>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Job_Title</valueSetName>
    </valueSet>
</CustomField>