knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/JobCategory__c.field-meta.xml
<CustomField>
    <fullName>JobCategory__c</fullName>
    <description>JobCategory for SHM XML Feed</description>
    <inlineHelpText>JobCategory for SHM</inlineHelpText>
    <label>JobCategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>