knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/JobID__c.field-meta.xml
<CustomField>
    <fullName>JobID__c</fullName>
    <description>JobID for SHM XML Feed</description>
    <inlineHelpText>JobID for SHM</inlineHelpText>
    <label>JobID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>