knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/JobReference__c.field-meta.xml
<CustomField>
    <fullName>JobReference__c</fullName>
    <description>JobReference for SHM XML Feed</description>
    <inlineHelpText>JobReference for SHM</inlineHelpText>
    <label>JobReference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>