knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/bpats__Job__c/fields/Legacy_Requisition__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Requisition__c</fullName>
    <description>Requisition Number from Bullhorn</description>
    <inlineHelpText>Requisition Number from Bullhorn</inlineHelpText>
    <label>Legacy Requisition #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>